[gd_scene load_steps=14 format=2]

[ext_resource path="res://textures/slider_grabber.png" type="Texture" id=1]
[ext_resource path="res://textures/water/Water Texture - Layer 2.png" type="Texture" id=2]
[ext_resource path="res://textures/water/Water Texture - Layer 3.png" type="Texture" id=3]
[ext_resource path="res://textures/water/Water Texture - Base.png" type="Texture" id=4]
[ext_resource path="res://textures/water/Water Texture - Layer 1.png" type="Texture" id=5]
[ext_resource path="res://materials/water_distortion.tres" type="Material" id=6]
[ext_resource path="res://themes/grabber_area.tres" type="StyleBox" id=7]
[ext_resource path="res://scripts/settings_menu.gd" type="Script" id=8]
[ext_resource path="res://fonts/Inkcalig.otf" type="DynamicFontData" id=9]

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.894118, 0.796078, 0.686275, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 0.803922, 0.72549, 0.631373, 1 )
corner_radius_top_left = 9
corner_radius_top_right = 9
corner_radius_bottom_right = 9
corner_radius_bottom_left = 9
expand_margin_top = 20.0
expand_margin_bottom = 20.0

[sub_resource type="Theme" id=3]
HSlider/icons/grabber = ExtResource( 1 )
HSlider/icons/grabber_highlight = ExtResource( 1 )
HSlider/styles/grabber_area = ExtResource( 7 )
HSlider/styles/grabber_area_highlight = ExtResource( 7 )
HSlider/styles/slider = SubResource( 4 )

[sub_resource type="DynamicFont" id=5]
size = 80
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=6]
size = 112
font_data = ExtResource( 9 )

[node name="CanvasLayer" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 8 )

[node name="Control" type="Control" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="water_texture_base" type="TextureRect" parent="Control"]
margin_left = -50.0
margin_top = -50.0
margin_right = 1870.0
margin_bottom = 1030.0
rect_scale = Vector2( 1.069, 1.079 )
mouse_filter = 2
texture = ExtResource( 4 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": true
}

[node name="water_texture_layer_1" type="TextureRect" parent="Control"]
self_modulate = Color( 1, 1, 1, 0.403922 )
margin_left = -50.0
margin_top = -50.0
margin_right = 1870.0
margin_bottom = 1030.0
rect_scale = Vector2( 1.069, 1.079 )
mouse_filter = 2
texture = ExtResource( 5 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": true
}

[node name="water_texture_layer_2" type="TextureRect" parent="Control"]
self_modulate = Color( 1, 1, 1, 0.47451 )
anchor_top = -3.8147e-08
margin_left = -50.0
margin_top = -50.0
margin_right = 1870.0
margin_bottom = 1030.0
rect_scale = Vector2( 1.069, 1.079 )
mouse_filter = 2
texture = ExtResource( 2 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": true
}

[node name="water_texture_layer_3" type="TextureRect" parent="Control"]
modulate = Color( 1, 1, 1, 0.462745 )
anchor_top = -3.8147e-08
margin_left = -50.0
margin_top = -50.0
margin_right = 1870.0
margin_bottom = 1030.0
rect_scale = Vector2( 1.069, 1.079 )
mouse_filter = 2
texture = ExtResource( 3 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": true
}

[node name="BackBufferCopy" type="BackBufferCopy" parent="."]
position = Vector2( 960, 540 )
scale = Vector2( 9.6, 5.4 )
copy_mode = 2

[node name="distorter" type="ColorRect" parent="BackBufferCopy"]
material = ExtResource( 6 )
margin_left = -100.0
margin_top = -100.0
margin_right = 100.0
margin_bottom = 100.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="master" type="HSlider" parent="."]
margin_left = 640.0
margin_top = 392.0
margin_right = 1464.0
margin_bottom = 456.0
theme = SubResource( 3 )
max_value = 1.0
step = 0.025
__meta__ = {
"_edit_use_anchors_": false
}

[node name="music" type="HSlider" parent="."]
margin_left = 640.0
margin_top = 448.0
margin_right = 1464.0
margin_bottom = 640.0
theme = SubResource( 3 )
max_value = 1.0
step = 0.025
__meta__ = {
"_edit_use_anchors_": false
}

[node name="sound_fx" type="HSlider" parent="."]
margin_left = 640.0
margin_top = 568.0
margin_right = 1464.0
margin_bottom = 760.0
theme = SubResource( 3 )
max_value = 1.0
step = 0.025
__meta__ = {
"_edit_use_anchors_": false
}

[node name="master_label" type="RichTextLabel" parent="."]
margin_left = 392.0
margin_top = 386.0
margin_right = 680.0
margin_bottom = 482.0
custom_fonts/normal_font = SubResource( 5 )
text = "MASTER"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="music_label" type="RichTextLabel" parent="."]
margin_left = 448.0
margin_top = 508.0
margin_right = 736.0
margin_bottom = 604.0
custom_fonts/normal_font = SubResource( 5 )
text = "MUSIC"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="sound_fx_label" type="RichTextLabel" parent="."]
margin_left = 328.0
margin_top = 628.0
margin_right = 648.0
margin_bottom = 724.0
custom_fonts/normal_font = SubResource( 5 )
text = "SOUND FX"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="volume_label" type="RichTextLabel" parent="."]
margin_left = 856.0
margin_top = 256.0
margin_right = 1200.0
margin_bottom = 416.0
custom_fonts/normal_font = SubResource( 6 )
text = "VOLUME"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton" type="TextureButton" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="value_changed" from="master" to="." method="_on_master_value_changed"]
[connection signal="value_changed" from="music" to="." method="_on_music_value_changed"]
[connection signal="value_changed" from="sound_fx" to="." method="_on_sound_fx_value_changed"]
